Navigation now folds and expands correctly and comes with a white background on mobile, independently from hero image.

--- a/source/assets/stylesheets/_navigation.scss
+++ b/source/assets/stylesheets/_navigation.scss
@@ -1,13 +1,14 @@
 .lean-cortado {
   #navigation-bar {
     background-color: $white;
-    height: $extra-large-spacing;
   }
 }
 
 .row {
   @include media($toggle-navigation) {
     padding: 0 $small-spacing;
+    background-color: $white;
+    min-height: em(100);
   }
 }
 
